# mark3-libc

./: README.md
src/: CMakeLists.txt  atoi.c  bcopy.c  bsearch.c  bzero.c  ctype.c  errno.c  getopt.c  m3_alloc.cpp  m3_alloc.h  m3_errno.cpp  m3_errno.h  m3_io.cpp  m3_io.h  memchr.c  memcmp.c  memcpy.c  memmove.c  memscan.c  memset.c  printf.c  qsort.c  rand.c  stdio.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strdup.c  strerror.c  strlcat.c  strlcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnicmp.c  strnlen.c  strpbrk.c  (+7 more)
src/public/: assert.h  ctype.h  endian.h  errno.h  getopt.h  iovec.h  malloc.h  new.h  printf.h  rand.h  stdio.h  stdlib.h  string.h  strings.h
src/public/sys/: types.h
